--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,14 +6,23 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+     
+       <li class="nav-item">
+       <%= link_to 'About' , about_path, class: 'nav-link' %>
+      </li>
+
+       <li class="nav-item">
+        <%= link_to 'Contact' , contact_path, class: 'nav-link' %>
+      </li>
+      
+      <li class="nav-itemß">
         <%= link_to 'Sign Up' , root_url, class: 'nav-link' %>
        
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Sign In</a>
       </li>
-     
+
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
