--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,9 +12,9 @@
       </li>
 
        <li class="nav-item">
-        <%= link_to 'Contact' , contact_path, class: 'nav-link' %>
+        <%= link_to 'Contact' , contact_form_path, class: 'nav-link' %>
       </li>
-      
+
       <li class="nav-itemß">
         <%= link_to 'Sign Up' , root_url, class: 'nav-link' %>
        
