Create Users Model + i18n

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -6,5 +6,5 @@
   <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
 
   
-  <%= link_to 'Create your account', '#' , class: 'btn btn-primary btn-lg' %>
+  <%= link_to 'Create your account', new_user_path , class: 'btn btn-primary btn-lg' %>
 </div>
