--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,32 +1,56 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <%= link_to 'Contact List' , root_url, class: 'navbar-brand' %>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-     
-       <li class="nav-item">
-       <%= link_to 'About' , about_path, class: 'nav-link' %>
-      </li>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#expanded-menu" aria-expanded=" false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to 'Contact List', root_url, class: 'navbar-brand' %>
+    </div>
 
-       <li class="nav-item">
-        <%= link_to 'Contact' , contact_form_path, class: 'nav-link' %>
-      </li> 
+  <!-- Conteudo exibido em telas maiores e que serao escondidos em telas menores -->
+  <div class="collapse navbar-collapse" id="expanded-menu">
+    <ul class="nav navbar-nav">
+      <% if !user_signed_in? %>
+        <li class="active">
+          <%= link_to 'Nova Conta', new_user_path %>
+        </li>
+      <% end %>
+    </ul>
 
-      <li class="nav-itemß">
-        <%= link_to 'Sign Up' , new_user_path, class: 'nav-link' %>
-       
+    <ul class="nav navbar-nav navbar-right">
+
+      <% if !user_signed_in? %>
+        <li>
+          <%= link_to 'Signin', signin_path %>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Sign In</a>
-      </li>
+      <% else %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            Welcome, <%= current_user.name %> <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <%= link_to 'My profile', "/user_contacts_path(current_user)" %>
+            </li>
+            <li>
+              <%= link_to 'Edit', edit_user_path(current_user) %>
+            </li>
+            <li class="divider" role="separator"></li>
+            <li>
+              <%= link_to 'Logout', logout_path, method: :delete %>
+            </li>
+          </ul>
+        </li>
+      <% end %>
 
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-    </form>
+
   </div>
+
+  </div>
+
 </nav>
